--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm Kushwinth Kumar and <span>Web Developer</span></h3>
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores excepturi placeat est odio distinctio. Voluptates, molestias voluptas. Iure velit quia nobis, blanditiis, nostrum esse tenetur fuga facere rerum voluptas harum!</p>
+                                    <h3>I'm Kushwinth Kumar a <span>Web Developer</span></h3>
+                                    <p>As a UI/UX designer and web developer, I blend creativity with technical expertise to build engaging digital solutions.</p>
+                                    <p> With a focus on user-centric design and seamless functionality, I aim to create compelling web experiences that leave a lasting impression</p>
                                 </div>
                             </div>
                             <div class="row">
