--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <h3 class="hello">Hello, this is <span class="name">Kushwinth Kumar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
                             <p>To secure a challenging position in a reputed organization where I can expand my skills, knowledge and learn new things.</p>
-                            <a href="Kushwinth Kumar Resume.html" target="_blank" class="btn" id="downloadButton">Download CV</a>
+                            <a href="Kushwinth Kumar Resume.pdf" target="_blank" class="btn" id="downloadButton">Download CV</a>
                             <!-- <a href="#about" data-section-index="2"class="btn">More About Me</a> -->
                         </div>
                         <div class="home-img padd-15">
