--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                             </a>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJNxNjpRNGwhdgsCwVPtnNrKMfkrQVLGgrxtgxgLvZCsPKfWZPLtJswtHwLmkxzgrDDldMg" target="_blank">
+                                            <a href="mailto:kushwinthkumar0215@gmail.com" target="_blank">
                                                 <p>Email : <span>kushwinthkumar0215@gmail.com</span></p>
                                             </a>
                                         </div>
@@ -352,7 +352,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSGMvlwdjXjgtjvlvbdhtDJfbTLhQhXVtZVKdDshSlzSMZGZrVPDjfmsfQlCQfpQHkfhdjfp" target="_blank"><p>kushwinthkumar0215@gmail.com</p></a>
+                            <a href="mailto:kushwinthkumar0215@gmail.com" target="_blank"><p>kushwinthkumar0215@gmail.com</p></a>
                         </div>
                         <!-- ====Contact Info Item 4=== -->
                         <div class="contact-info-item padd-15">
