--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                                             </a>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>City : <span>Electronic City</span></p>
+                                            <a href="https://maps.app.goo.gl/eqdy9vFTbMM87B1a7" target="_blank">
+                                                <p>City : <span>Electronic City, Bengaluru - 560100</span></p>
+                                            </a>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Freelance : <span>Available</span></p>
@@ -346,7 +348,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-location-dot"></i></div>
                             <h4>Address</h4>
-                            <p>Electronic City</p>
+                            <a href="https://maps.app.goo.gl/eqdy9vFTbMM87B1a7" target="_blank"><p>Electronic City, Bengaluru - 560100</p></a>
                         </div>
                         <!-- ====Contact Info Item 3=== -->
                         <div class="contact-info-item padd-15">
