--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, this is <span class="name">Kushwinth Kumar</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>To obtain a challenging position within a reputable organization that allows for the expansion of my skills and knowledge while providing opportunities for continuous learning and growth.</p>
+                            <p>Trained fresher aspiring to join a leading company that aligns with my skills. 
+                                Self-motivated graduate seeking an entry-level position in the software department. 
+                                Eager to apply my knowledge and contribute effectively.</p>
                             <a href="Kushwinth Kumar Resume.pdf" target="_blank" class="btn" id="downloadButton">Download CV</a>
                             <!-- <a href="#about" data-section-index="2"class="btn">More About Me</a> -->
                         </div>
@@ -85,8 +87,8 @@
                                             <p>Age : <span>22</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <a href="https://github.com/KushwinthKumar" target="_blank">
-                                                <p>Github : <span>https://github.com/KushwinthKumar</span></p>
+                                            <a href="https://github.com/kushwi15" target="_blank">
+                                                <p>Github : <span>github.com/kushwi15</span></p>
                                             </a>
                                         </div>
                                         <div class="info-item padd-15">
@@ -98,7 +100,7 @@
                                             <p>Degree : <span>B.E. Mechanical Engineering</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <a href="https://wa.me/qr/GKBLUZQGRTMWA1" target="_blank">
+                                            <a href="https://wa.me/919390489074?text=Hello%20Kushwinth!" target="_blank">
                                                 <p>Phone : <span>+91 9390489074</span></p>
                                             </a>
                                         </div>
@@ -220,22 +222,22 @@
                                                 <!-- ===Certification 1=== -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                    <h4><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218593856072663041-nsWV?utm_source=share&utm_medium=member_desktop" target="_blank">Developer Job Simulation</a> internship by Accenture.</h4>
+                                                    <p><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218593856072663041-nsWV?utm_source=share&utm_medium=member_desktop" target="_blank">Developer Job Simulation</a> internship by Accenture.</p>
                                                 </div>
                                                 <!-- ===Certification 2=== -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                    <h4><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218594097706541057-5DAz?utm_source=share&utm_medium=member_desktop" target="_blank">Software Engineering Simulation</a> internship by J.P. Morgan Chase & Co.</h4>
+                                                    <p><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218594097706541057-5DAz?utm_source=share&utm_medium=member_desktop" target="_blank">Software Engineering Simulation</a> internship by J.P. Morgan Chase & Co.</p>
                                                 </div>
                                                 <!-- ===Certification 3=== -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                    <h4><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218857962197377025-f613?utm_source=share&utm_medium=member_desktop" target="_blank">Advanced Software Engineering Simulation</a> internship by Walmart.</h4>
+                                                    <p><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7218857962197377025-f613?utm_source=share&utm_medium=member_desktop" target="_blank">Advanced Software Engineering Simulation</a> internship by Walmart.</p>
                                                 </div>
                                                 <!-- ===Certification 4=== -->
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                    <h4><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7219228417345376256-z6YC?utm_source=share&utm_medium=member_desktop" target="_blank">Software Engineering Simulation</a> internship by Goldman Sachs's.</h4>
+                                                    <p><a href="https://www.linkedin.com/posts/kushwinthkumar_forage-certificate-activity-7219228417345376256-z6YC?utm_source=share&utm_medium=member_desktop" target="_blank">Software Engineering Simulation</a> internship by Goldman Sachs's.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -331,7 +333,7 @@
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                     <h4>AC Service App</h4>
-                                    <a href="https://github.com/KushwinthKumar/NR-SERVICES" target="_blank"><img src="images/portfolio/portfolio-4.png" alt=""></a>
+                                    <a href="https://github.com/kushwi15/NR-SERVICES" target="_blank"><img src="images/portfolio/portfolio-4.png" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -340,7 +342,7 @@
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                     <h4>Employee-360</h4>
-                                    <a href="https://github.com/KushwinthKumar/Employee-360" target="_blank"><img src="images/portfolio/portfolio-3.jpg" alt=""></a>
+                                    <a href="https://github.com/kushwi15/Employee-360" target="_blank"><img src="images/portfolio/portfolio-3.jpg" alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -363,7 +365,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Cell No</h4>
-                            <a href="https://wa.me/qr/GKBLUZQGRTMWA1" target="_blank"><p>+91 9390489074</p></a>
+                            <a href="https://wa.me/919390489074?text=Hello%20Kushwinth!" target="_blank"><p>+91 9390489074</p></a>
                         </div>
                         <!-- ====Contact Info Item 2=== -->
                         <div class="contact-info-item padd-15">
@@ -381,7 +383,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-brands fa-github"></i></div>
                             <h4>Github</h4>
-                            <a href="https://github.com/KushwinthKumar" target="_blank"><p>https://github.com/KushwinthKumar</p></a>
+                            <a href="https://github.com/kushwi15" target="_blank"><p>github.com/kushwi15</p></a>
                         </div>
                     </div>
                     <h3 class="contact-title padd-15">SEND ME A MESSAGE</h3>
